python-defaults (2.6.5-9) UNRELEASED; urgency=low

  [ Piotr Ożarowski ]
  * pyclean, pycompile: use .communicate() instead of .wait() to avoid hanging
    `dpkg -L PACKAGE` in few situations

  [ Matthias Klose ]
  * Require python (>= 2.6.5-9~) in generated dependencies to use the fixed
    pycompile.

 -- Piotr Ożarowski <piotr@debian.org>  Sat, 17 Jul 2010 18:58:23 +0200

python-defaults (2.6.5-8) unstable; urgency=low

  * Revert:
    - python-minimal: Provide symlink to binary and manpage for
      /usr/bin/python2.
    This interpreter name is not created in the upstream sources.
    python should be used instead.

 -- Matthias Klose <doko@debian.org>  Sat, 17 Jul 2010 13:10:06 +0200

python-defaults (2.6.5-7) unstable; urgency=low

  * pyversions.py: fall back to the list of supported Python versions
    if debian/pyversions doesn't exist (as in -5, closes: 588820, thanks to
    Vincent Legout)

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 12 Jul 2010 19:15:17 +0200

python-defaults (2.6.5-6) unstable; urgency=low

  [ Piotr Ożarowski ]
  * dh_python2:
    - invoke `pycentral pkgremove PACKAGE` in preinst if upgrading from
      python-central based packages
    - block python package transitions via ${python:Breaks} or
      ${python:Depends} (Breaks will be used if available)
    - recognize more requires.txt patterns in debpython.pydist
  * pyversions.py:
    - print error message if file cannot be opened (closes:
      521508, thanks to Carl Chenet for the original patch)
    - print nice error message if computed set of supported versions is empty
      (closes: 583392)
  * debian/rules: do not ignore errors (two more `set -e`s added, closes:
    397499)
  * python-doc now suggests python-examples (closes: #585774)
  * python package doesn't conflict with python2.1 and python2.3 anymore (2.1
    and 2.3 are no longer in Debian)
  * Standards-Version bumped to 3.9.0:
    - some packages moved from Conflicts to versioned Breaks
    - Homepage field added